Fixing disappearing technology icons on mobileview

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -204,6 +204,14 @@ a:visited {
 .navigation-bar {
   display: none;
 }
+
+.center-technology-image {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media only screen and (min-width: 800px) {
   .about-me-container {
     display: grid;
@@ -270,13 +278,7 @@ a:visited {
     width: calc(80vw / 5 - 2 * 10px);
     height: calc(80vw / 5 - 2 * 10px);
   }
-  .center-technology-image {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+
   .projects-header {
     font-size: 4em;
   }
@@ -302,5 +304,13 @@ a:visited {
   }
   footer {
     font-size: 1.5em;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .technology {
+    margin: 10px;
+    width: calc(80vw / 7 - 2 * 10px);
+    height: calc(80vw / 7 - 2 * 10px);
   }
 }
